# gitrs

./: .gitignore  Cargo.toml  README.md
src/: args.rs  blob.rs  builtins.rs  commit.rs  init.rs  main.rs  repo.rs
src/commands/: init.rs
