[package]
name = "gitrs"
version = "0.1.0"
authors = ["langnostic <langnostic1@pm.me>"]
repository = "https://github.com/langnostic/gitrs"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
path-clean = "0.1.*"
